# THUAI3.0

./: .gitignore  API.md  ClientDockerfile  Config.json  README.md  ServerDockerfile  delete_files_not_in_md5list.py  download_windows_only.py  md5list.json  runAgent.bat  runAgent.ps1  runClient.bat  runClientConsole.bat  runClientConsole.ps1  runServer.bat  runServer.ps1  runServerToFile.bat  upload_to_tencent_cloud.py  【重要】工作总结.md  架构与对接.md  赛题规则.md  饼.md
.circleci/: config.yml
.github/workflows/: dotnetcore.yml
CAPI/: .dockerignore  .gitattributes  .gitignore  .uploadignore  AI.sln  AI.vcxproj  AI.vcxproj.filters  CMakeLists.txt  Dockerfile_compile  Dockerfile_run  README.md  compile.sh  modify.py  run.sh  runtime.sh  win_make.bat
CAPI/CAPI/: API.cpp  CAPI.cpp  CAPI.h  CAPI.sln  CAPI.vcxproj  CAPI.vcxproj.filters  Message.cpp  OS_related.h  constants.h  debug.cpp  debug.h  main.cpp  player.cpp
CAPI/include/: API.h  CAPI.h  Constant.h  Message.h  OS_related.h  Sema.h  debug.h  player.h  structures.h
CAPI/include/common/: GlobalDef.h
CAPI/proto/: CMakeLists.txt  generator.bat
CAPI/src/: API.cpp  CAPI.cpp  Message.cpp  OS_related.cpp  Sema.cpp  debug.cpp  main.cpp  player.cpp  structure.cpp
CAPI/windows_only/: .gitignore
CAPI/windows_only/proto_files/: AgentId.pb.cc  AgentId.pb.h  ChatMessage.pb.cc  ChatMessage.pb.h  MessageToClient.pb.cc  MessageToClient.pb.h  MessageToServer.pb.cc  MessageToServer.pb.h  PingPacket.pb.cc  PingPacket.pb.h
Config/: .uploadignore  Config.json  Constant.h  generateConstant.py
communication/: .gitignore  README.md  THUAI.sln  api.md  resttest.py  runAgent.bat  runClient.bat  runServer.BAT  runServer.bat  runall.bat
communication/Agent/: Agent.csproj  Agent.sln  Communication.Agent.csproj  Program.cs  ServerPacket.cs
communication/Client/: API.cs  CAPI.cs  CAPI.csproj  Client.csproj  Client.sln  ClientPacket.cs  Communication.CAPI.csproj  ICAPI.cs  Program.cs
communication/ClientChatTest/: ClientChatTest.csproj  Communication.ClientChatTest.csproj  Program.cs
communication/Proto/: .gitattributes  (+30 more)
dependency/: AgentId.proto  CMakeLists.txt  ChatMessage.proto  MessageToClient.proto  MessageToServer.proto  PingPacket.proto  README.md  generateProto.ps1
installer/: .gitignore  README.md
interaction/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Interaction.sln  InteractionFinal.sln  README.md  ToDo.md  app.config  packages.config  对照表.md
launcher/: Form1.Designer.cs  Form1.cs  Launcher.cs  Login.cs  README.md  StartEXE.cs  WindowsFormsApp4.csproj  WindowsFormsApp4.sln  净土保卫战.sln
logic/: .gitignore  AgentDockerfile  Client.cs  ClientDockerfile  Constant.cs  Logic.sln  README.md  RunAgentClient.sh  Server.cs  ServerDockerfile  build_logic.ps1  代码架构.md  菜谱.md  配置文件说明.md
playBack/: PlayBack.sln
unittest/: .gitignore  README.md
(+145 files in other folders)
